--- a/Tic-Tac-Toe/What's up on a field/task-info.yaml
+++ b/Tic-Tac-Toe/What's up on a field/task-info.yaml
@@ -316,5 +316,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/48/stages/257/implement
-status: Unchecked
+status: Solved
 record: -1
