--- a/Tic-Tac-Toe/Fight!/task-info.yaml
+++ b/Tic-Tac-Toe/Fight!/task-info.yaml
@@ -413,5 +413,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/48/stages/259/implement
-status: Unchecked
+status: Failed
 record: -1
